--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=bianca.database.windows.net; Initial Catalog=FluxoDeCaixa; TrustServerCertificate=True; User ID=senai;Password=Admin@123;"
+    "DefaultConnection": "Data Source=dbBianca.mssql.somee.com; Initial Catalog=dbBianca; TrustServerCertificate=True; User ID=biancafurlanetto_SQLLogin_1;Password=4wab1ey4j1;"
   },
   "Logging": {
     "LogLevel": {
